{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 39,
  "lineage": "0522b528-b456-9668-8374-7756ea442f8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:192946690523:instance/i-0516b87260b361549",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0516b87260b361549",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "IBM-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093084d27a8f94e43",
            "private_dns": "ip-10-0-1-120.ec2.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-54-205-235-12.compute-1.amazonaws.com",
            "public_ip": "54.205.235.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d43656ff7b744113",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fc9461a00ad4f36",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-046693053fc4e116a"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:internet-gateway/igw-0454760e94ca41f44",
            "id": "igw-0454760e94ca41f44",
            "owner_id": "192946690523",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0f497eaaa872ce3b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:route-table/rtb-05242269047b6e4b5",
            "id": "rtb-05242269047b6e4b5",
            "owner_id": "192946690523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0454760e94ca41f44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f497eaaa872ce3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003f142dc433b499c",
            "route_table_id": "rtb-05242269047b6e4b5",
            "subnet_id": "subnet-01fc9461a00ad4f36"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd545ff601fcd1f",
            "route_table_id": "rtb-05242269047b6e4b5",
            "subnet_id": "subnet-02bf3c93728c028f6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:security-group/sg-046693053fc4e116a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046693053fc4e116a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SSH",
            "name_prefix": "",
            "owner_id": "192946690523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security Group"
            },
            "tags_all": {
              "Name": "SSH Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f497eaaa872ce3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:subnet/subnet-01fc9461a00ad4f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fc9461a00ad4f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192946690523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f497eaaa872ce3b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:subnet/subnet-02bf3c93728c028f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bf3c93728c028f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192946690523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0f497eaaa872ce3b0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:192946690523:vpc/vpc-0f497eaaa872ce3b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aaa72d9ededa4639",
            "default_route_table_id": "rtb-056be99ec240d274f",
            "default_security_group_id": "sg-06a3c55a2108b88a8",
            "dhcp_options_id": "dopt-09476d46a46497cf3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f497eaaa872ce3b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056be99ec240d274f",
            "owner_id": "192946690523",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}